# DirDiff-Lite

./: .gitignore  PROJECT.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  comparator.rs  config.rs  hash.rs  lib.rs  main.rs  models.rs  report.rs  scanner.rs
src/components/: AppSidebar.vue  AppTopbar.vue  CompareRules.vue  EmptyState.vue  FolderPicker.vue  PresetPanel.vue  ResultTable.vue  StatCard.vue
src/data/: presets.ts
src/pages/: AboutPage.vue  ComparePage.vue  ResultPage.vue  SettingsPage.vue
src/stores/: compareStore.ts
src/styles/: main.css
src/types/: diff.ts
文档/dirdiff-lite-ui-html/: README.txt  about.html  index.html  result.html  settings.html  style.css
